CIRC-4333 Adding jquery to insert the link and icon for h2 headings. Adding jquery and css to correct the anchor/heading overlap issue.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -463,3 +463,30 @@ a.card-link {
     font-size: 6rem;
     line-height: 1.1;
 }
+
+/*--------------------------------------------------------------
+# Heading Links
+--------------------------------------------------------------*/
+
+h2::before {
+    display: block; 
+    content: " "; 
+    margin-top: -70px; 
+    height: 70px; 
+    visibility: hidden; 
+    pointer-events: none;
+}
+
+.heading-link {
+    margin-left: 5px;
+    transition: color .15s ease-in;
+}
+
+.heading-link:hover  {
+    opacity: .7;
+}    
+
+.heading-link .svg-inline--fa {
+    height: .6em;
+    vertical-align: .08em;
+}
